---
source: src/commands/add.rs
expression: template_event_indexer_manifest(COMPONENT_NAME).to_str_as_yaml().unwrap()
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/horizonx-tech/chainsight-cli/main/resources/schema/event_indexer.json
version: v1
metadata:
  label: Additional
  type: event_indexer
  description: ''
  tags:
  - Ethereum
  - ERC-20
  - Transfer
datasource:
  id: '0000000000000000000000000000000000000000'
  event:
    identifier: EventIdentifier
    interface: null
  network:
    rpc_url: https://polygon-mumbai.infura.io/v3/${INFURA_MUMBAI_RPC_URL_KEY}
    chain_id: 80001
  from: 37730337
  contract_type: ERC-20
  batch_size: null
interval: 3600
cycles: null

